force-app/main/default/objects/mcdm_15__SubmissionSendSettings__c/mcdm_15__SubmissionSendSettings__c.object-meta.xml
<CustomObject>
    <description>The Send Settings for a given Sendable Record related to a set of Submission records.</description>
    <label>MCDM Submission Send Settings</label>
    <nameField>
        <displayFormat>DMSSS-{000000}</displayFormat>
        <label>MCDM Submission Send Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCDM Submission Send Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>