force-app/main/default/objects/mcdm_15__SubmissionSendSettings__c/fields/mcdm_15__EntryObjectId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__EntryObjectId__c</fullName>
    <label>Entry Object Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>