force-app/main/default/objects/mcdm_15__SubmissionSendSettings__c/fields/mcdm_15__SmsValue__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__SmsValue__c</fullName>
    <label>SMS Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>